# open-eago

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.spdx  NOTICE  README.md  ROADMAP.md  SECURITY.md  SPECIFICATION.md
.github/workflows/: deploy-pages.yml
docs/: README.md  index.html  main.js
docs/capabilities/01_contract/: README.md  contract.md
docs/capabilities/02_planning/: README.md  planning.md
docs/capabilities/03_validation/: README.md  validation.md
docs/capabilities/04_execution/: README.md  execution.md
docs/capabilities/05_context/: README.md  context.md
docs/capabilities/06_communication/: README.md  communication.md
docs/overview/: architecture.md  identity.md  openeago_proposal.md  openemcp_proposal.md  overview.md  performance-sla-slo-kpi.md  reference_materials.md  risk-management.md  security.md
docs/spec/: spec.json
examples/agent-registry/: Cargo.toml  README.md  RFC.md  config.bootstrap.yaml
examples/agent-registry/images/: OpenEAGO-registry.drawio
examples/agent-registry/scripts/: quick_start.sh
examples/agent-registry/src/: bootstrap.rs  handlers.rs  main.rs  proxy.rs  registry.rs  server.rs  tls.rs
examples/agent-registry/src/models/: mod.rs  types.rs
examples/agent-template/: README.md  RFC.md  agent.mcp.json  config.example.yaml  config.yaml  demo_agent.py  requirements.txt  test_demo_agent.py
examples/agent-template/agent/: __init__.py  card.py  config.py  envelope.py  mcp_handler.py  mcp_spec.py  registry.py  runtime.py
examples/context-management/: DESIGN.md  demo.py  proposal.md  pyproject.toml
examples/context-management/context_management/: __init__.py  crdt_backend.py  models.py  workflow_context.py
examples/mcp-8004-enterprise/: simulation-addresses.json
examples/mcp-8004-enterprise/agents/: bank-account-setup-agent.json  bank-product-setup-agent.json
examples/mcp-8004-enterprise/agents_implementation_py/: launch_bridges.py
examples/mcp-8004-enterprise/design/: mcp.extension.md  onboarding.flow.md
examples/mcp-8004-enterprise/scripts/: flow-driver.js
examples/mcp-8004-enterprise/test/: ConsortiumGovernance.test.js  DatasetRegistry.test.js  ExecutionTraceLog.test.js  (+3 more)
examples/mcp-erc8004-enterprise/: CLAUDE.md  README.md  hardhat.config.js  render-diagram.ps1  start.ps1
examples/prompt_registry/: .gitignore  CLAUDE.md  README.md  hardhat.config.js  package-lock.json  package.json  proposal.md
examples/prompt_registry/bridge/: .env.example  langsmith_client.py  pyproject.toml  registry_bridge.py  runtime_verifier.py  seed_langsmith.py
examples/provenance_manifest/: DESIGN.md  demo.py  proposal.md  pyproject.toml
examples/provenance_manifest/provenance_manifest/: __init__.py  collector.py  models.py  signer.py  verifier.py
projects/mcp-8004-enterprise/: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
projects/mcp-8004-enterprise/agents_implementation_py/: bounds_monitor.py  launch_servers.py  pyproject.toml
projects/mcp-8004-enterprise/agents_implementation_py/bridges/: client_setup_bridge.py  credit_risk_bridge.py  hf_document_bridge.py
projects/mcp-8004-enterprise/agents_implementation_py/eago_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
projects/mcp-8004-enterprise/agents_implementation_py/graph/nodes/: credit_node.py
projects/mcp-8004-enterprise/agents_implementation_py/servers/: aml_server.py  client_setup_server.py  credit_risk_server.py  hf_credit_negotiator_server.py
projects/mcp-8004-enterprise/agents_implementation_py/shared/: abis.py  prompt_hash.py
projects/mcp-8004-enterprise/agents_implementation_py/tests/: test_prompt_hash.py  test_vault_signer.py
schemas/: README.md
schemas/v0.1/: base-envelope.schema.json  communication-delivery.schema.json  context-state-management.schema.json  contract-management.schema.json  execution-resilience.schema.json  planning-negotiation.schema.json  validation-compliance.schema.json
spec/: spec.json
spec/v0.1.0/: README.md  spec.json
spec/v1.0.0/: README.md  spec.json
website/: index.html  styles.css
(+166 files in other folders)
