[package]
name = "openemcp-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.12.1", features = ["openssl"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.15.19"
openssl = "0.10"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.33"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "ansi"] }
tracing-actix-web = "0.7.20"
local-ip-address = "0.6.8"
utoipa = { version = "5.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }