[package]
name = "openemcp-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.12.1", features = ["openssl"] }
clap = { version = "4.5", features = ["derive"] }
openssl = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
url = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yml = "0.0.12"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "ansi"] }
tracing-actix-web = "0.7.20"
local-ip-address = "0.6.8"
utoipa = { version = "5.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }