[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eago-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "mcp[cli]>=1.0",
    "web3>=7.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "eth-account>=0.13",
    "typing_extensions>=4.0",
    # FastMCP streamable-http transport deps (pulled transitively by mcp[cli])
    "starlette>=0.40",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
